bk_ida/gccida/g2/get_cfa_from_loc_descr
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_cfa_from_loc_descr/src/dwarf2out.c:3423:1: error: must use 'enum' tag to refer to type 'dwarf_location_atom'
dwarf_location_atom dw_loc_opc; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_cfa_from_loc_descr/src/dwarf2out.c:3480:6: error: use of undeclared identifier 'CSWTCH_607'
v5 = CSWTCH_607[v4]; 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/get_cfa_from_loc_descr/src/obj/dwarf2out.o] Error 1
